--- a/backend/package.json
+++ b/backend/package.json
@@ -17,14 +17,14 @@
     "helmet": "^7.1.0",
     "dotenv": "^16.3.1",
     "pg": "^8.11.3",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
+    "zod": "^3.22.4",
     "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
     "@types/pg": "^8.10.9",
     "@types/node": "^20.10.4",
-    "tsx": "^4.6.2",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "tsx": "^4.6.2"
   }
 }
